# invoice-project

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: health.py  invoices.py
app/core/: dependencies.py  exception_handlers.py  logging.py  middleware.py  settings.py
app/db/: database.py
app/db/migrations/: env.py
app/db/migrations/versions/: 001_initial_schema.py
app/domain/entities/: __init__.py
app/domain/enums/: __init__.py
app/domain/exceptions/: __init__.py
app/infrastructure/ai/: __init__.py
app/infrastructure/ocr/: __init__.py
app/infrastructure/persistence/models/: __init__.py
app/infrastructure/persistence/repositories/: __init__.py
app/schemas/: __init__.py
app/services/: celery_tasks.py  invoice_service.py
docker/: .env.example  docker-compose.yml
scripts/: run_tests.sh  start.sh
tests/: conftest.py
tests/integration/: test_invoice_api.py
tests/unit/services/: test_ai_client.py  test_invoice_service.py
