[tool.poetry]
name = "invoice-ai"
version = "1.0.0"
description = "AI-Powered Invoice & Expense Management System — AI/Backend Module"
authors = ["Engineering Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
openai = "^1.30.1"
pytesseract = "^0.3.10"
Pillow = "^10.3.0"
pypdf2 = "^3.0.1"
pdf2image = "^1.17.0"
pdfplumber = "^0.10"
python-multipart = "^0.0.9"
redis = { version = "^5.0.4", extras = ["hiredis"] }
celery = { version = "^5.4.0", extras = ["redis"] }
structlog = "^24.1.0"
httpx = "^0.27.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
tenacity = "^8.3.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
faker = "^25.2.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
black = "^24.4.2"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
